Implement the punish mechanic, and documentation
